<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="Back"
        android:elevation="8dp"
        android:padding="10dp"
        android:src="@drawable/ic_arrow_back" />

    <ImageView
        android:id="@+id/filterButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="top|start"
        android:layout_margin="16dp"
        android:padding="10dp"
        android:src="@android:drawable/ic_menu_manage"
        android:contentDescription="Filter Mood Events"
        android:elevation="8dp" />
</FrameLayout>
