<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/moodFragmentRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <ListView
            android:id="@+id/moodList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:divider="@android:color/transparent"
            android:dividerHeight="12dp"
            android:clipToPadding="false"
            android:paddingBottom="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/bottomControls"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:id="@+id/bottomControls"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/filterButton"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Filter"
                android:textColor="@color/white"
                app:icon="@drawable/ic_filter"
                app:iconGravity="textStart"
                app:iconTint="@color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mapButton"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="Map"
                android:textColor="@color/white"
                app:icon="@drawable/ic_map"
                app:iconGravity="textStart"
                app:iconTint="@color/white" />

            <Button
                android:id="@+id/addMoodButton"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="Add"
                android:textColor="@color/white"
                app:icon="@drawable/ic_add"
                app:iconGravity="textStart"
                app:iconTint="@color/white" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>